Fix Badges being too small when scrollable and not expandable (#5987)

--- a/src/renderer/components/badge/badge.module.scss
+++ b/src/renderer/components/badge/badge.module.scss
@@ -25,7 +25,7 @@
   cursor: pointer;
 }
 
-.badge:not(.isExpanded) {
+.badge:not(.scrollable):not(.isExpanded) {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
